# dometyl-keyboard

./: .gitignore  README.md  dometyl.opam  dune-project  index.html  setup.sh
docs/: dune  index.mld  walkthrough.ml  walkthrough.mld
docs/dometyl/: index.html
docs/dometyl/Boards/: index.html
docs/dometyl/Boards__Choc_skeletyl/: index.html
docs/dometyl/Boards__Choctyl/: index.html
docs/dometyl/Boards__Closed/: index.html
docs/dometyl/Boards__Dartyl/: index.html
docs/dometyl/Boards__Deractyl/: index.html
docs/dometyl/Boards__Niztyl/: index.html
docs/dometyl/Boards__Skeletyl/: index.html
docs/dometyl/Boards__Splaytyl/: index.html
docs/dometyl/Dometyl/: index.html
docs/dometyl/Dometyl__/: index.html
docs/dometyl/Dometyl__Bottom/: index.html
docs/dometyl/Dometyl__Case/: index.html
docs/dometyl/Dometyl__Choctyl/: index.html
docs/dometyl/Dometyl__Columns/: index.html
docs/dometyl/Dometyl__Curvature/: index.html
docs/dometyl/Dometyl__CylWall/: index.html
docs/dometyl/Dometyl__Infix/: index.html
docs/dometyl/Dometyl__Niz/: index.html
docs/dometyl/Dometyl__Plate/: index.html
docs/dometyl/Dometyl__Ports/: index.html
docs/dometyl/Dometyl__Sigs/: index.html
docs/dometyl/Dometyl__Skeletyl/: index.html
docs/dometyl/Dometyl__Splaytyl/: index.html
docs/dometyl/Dometyl__Util/: index.html
docs/dometyl/Dometyl__Wall/: index.html
docs/dometyl/Generator/: index.html
docs/dometyl/Generator__/: index.html
docs/dometyl/Generator__BastardShield/: index.html
docs/dometyl/Generator__Bezier/: index.html
docs/dometyl/Generator__Bottom/: index.html
docs/dometyl/Generator__Bridge/: index.html
docs/dometyl/Generator__Caps/: index.html
docs/dometyl/Generator__Case/: index.html
docs/dometyl/Generator__Choc/: index.html
docs/dometyl/Generator__Column/: index.html
docs/dometyl/Generator__Columns/: index.html
docs/dometyl/Generator__Connect/: index.html
docs/dometyl/Generator__Curvature/: index.html
docs/dometyl/Generator__CylWall/: index.html
docs/dometyl/Generator__Eyelet/: index.html
docs/dometyl/Generator__Hand/: index.html
docs/dometyl/Generator__Infix/: index.html
docs/dometyl/Generator__KeyHole/: index.html
docs/dometyl/Generator__Mx/: index.html
docs/dometyl/Generator__Niz/: index.html
docs/dometyl/Generator__Plate/: index.html
docs/dometyl/Generator__Points/: index.html
docs/dometyl/Generator__Ports/: index.html
docs/dometyl/Generator__Screw/: index.html
docs/guides/: dune
docs/helpers/: copier.ml  doccer.ml  dune
dometyl/: .ocamlformat  build_docs.sh  case.scad  case_ast.ml  dometyl.opam  dune  dune-project  index.html  walkthrough.html
dometyl/Boards/: index.html
dometyl/Boards__Choc_skeletyl/: index.html
dometyl/Boards__Choctyl/: index.html
dometyl/Boards__Closed/: index.html
dometyl/Boards__Dartyl/: index.html
dometyl/Boards__Dartyl_choc/: index.html
dometyl/Boards__Dartyl_mx/: index.html
dometyl/Boards__Deractyl/: index.html
dometyl/Boards__Niztyl/: index.html
dometyl/Boards__Skeletyl/: index.html
dometyl/Boards__Splaytyl/: index.html
dometyl/Dometyl/: index.html
dometyl/Generator/: index.html
dometyl/Generator__/: index.html
dometyl/Generator__BastardShield/: index.html
dometyl/Generator__Bezier/: index.html
dometyl/Generator__Bottom/: index.html
dometyl/Generator__Bridge/: index.html
dometyl/Generator__Caps/: index.html
dometyl/Generator__Case/: index.html
dometyl/Generator__Choc/: index.html
dometyl/Generator__Column/: index.html
dometyl/Generator__Columns/: index.html
dometyl/Generator__Connect/: index.html
dometyl/Generator__Curvature/: index.html
dometyl/Generator__CylWall/: index.html
dometyl/Generator__Eyelet/: index.html
dometyl/Generator__Hand/: index.html
dometyl/Generator__Infix/: index.html
dometyl/Generator__KeyHole/: index.html
dometyl/Generator__Mx/: index.html
dometyl/Generator__Niz/: index.html
dometyl/Generator__Plate/: index.html
dometyl/Generator__Points/: index.html
dometyl/Generator__Ports/: index.html
dometyl/Generator__Sensor/: index.html
dometyl/Generator__Sigs/: index.html
dometyl/Generator__Tent/: index.html
dometyl/Generator__Util/: index.html
dometyl/Generator__Wall/: index.html
dometyl/Generator__Walls/: index.html
dometyl/assets/: dune
dometyl/boards/: choc_skeletyl.ml  choctyl.ml  closed.ml  dartyl_choc.ml  dartyl_mx.ml  deractyl.ml  dune  niztyl.ml  skeletyl.ml  splaytyl.ml
dometyl/generator/: bastardShield.ml  bastardShield.mli  bottom.ml  bottom.mli  bridge.ml  caps.ml  case.ml  case.mli  choc.ml  choc.mli  column.ml  column.mli  columns.ml  connect.ml  connect.mli  curvature.ml  curvature.mli  dune  eyelet.ml  eyelet.mli  eyelets.ml  eyelets.mli  generator.ml  hand.ml  iMap.ml  key.ml  key.mli  mx.ml  niz.ml  niz.mli  plate.ml  plate.mli  points.ml  points.mli  ports.ml  ports.mli  sensor.mli  sigs.ml  tent.ml  tent.mli  (+5 more)
dometyl/lib/: Ports.ml  bezier.ml  bottom.ml  bottom.mli  bridge.ml  caps.ml  case.ml  case.mli  column.ml  columns.ml  columns.mli  connect.ml  connect.mli  curvature.ml  curvature.mli  dometyl.ml  dune  infix.ml  infix.mli  keyHole.ml  keyHole.mli  mx.ml  mx.mli  niz.ml  nizBottom.ml  plate.ml  plate.mli  points.ml  points.mli  ports.ml  rotation.ml  screw.ml  screws.ml  sensor.ml  sigs.ml  tent.ml  tent.mli  util.ml  wall.ml  walls.ml
dometyl/models/: dune  main.ml  main.ml.example
dometyl/test/: dune
lib/: bastardShield.ml  bastardShield.mli  bottom.ml  bottom.mli  bridge.ml  caps.ml  case.ml  case.mli  choc.ml  column.ml  columns.ml  columns.mli  connect.ml  connect.mli  curvature.ml  curvature.mli  dometyl.ml  dune  eyelet.ml  eyelet.mli  hand.ml  idx.ml  key.ml  key.mli  mx.ml  mx.mli  niz.ml  niz.mli  plate.ml  plate.mli  points.ml  points.mli  ports.ml  sensor.ml  tent.ml  tent.mli  util.ml  wall.ml  wall.mli  walls.mli
models/: dune  main.ml  main.ml.example
models/examples/: choc_skeletyl.ml  choctyl.ml  closed.ml  dartyl_choc.ml  dartyl_mx.ml  deractyl.ml  dune  niztyl.ml  skeletyl.ml  splaytyl.ml
models/helpers/: runner.ml
(+645 files in other folders)
