(documentation)

(executables
 (names walkthrough)
 (libraries OSCADml dometyl))

(rule
 (alias guides)
 (deps
  (:doccer "../dune_helpers/doccer.exe")
  (:ml
   (glob_files "*.ml")))
 (targets "walkthrough.mld")
 ; (mode promote)
 (action
  (run %{doccer} %{ml})))

(rule
 (alias guides)
 (deps
  (:runner "../dune_helpers/runner.exe")
  (:scads
   (glob_files "*.exe")))
 (targets
  (dir "scads"))
 ; (mode promote)
 (action
  (chdir
   "scads"
   (run %{runner} %{scads}))))

(rule
 (alias guides)
 (deps
  (:exporter "../dune_helpers/snapper.exe")
  (:scads
   (glob_files "scads/*.scad")))
 (targets
  (dir "pngs"))
 ; (mode promote)
 (action
  (chdir
   "pngs"
   (run %{exporter} %{scads}))))

(rule
 (alias guides)
 (deps
  (:copier "../dune_helpers/copier.exe")
  (:img
   (glob_files assets/*)
   (glob_files pngs/*)))
 (targets
  (dir "odoc-assets"))
 (action
  (progn
   (run %{copier} "odoc-assets" "--basename" %{img})
   (run %{copier} "../_doc/_html/dometyl/_assets" "--basename" %{img}))))

(alias
 (name doc)
 (deps
  (alias guides)))

(install
 (files
  (glob_files odoc-assets/*))
 (section doc))
