(documentation)

(executables
 (names walkthrough)
 (libraries OSCADml dometyl))

(rule
 (alias doc)
 (deps
  (:doccer "../dune_helpers/doccer.exe")
  (:ml
   (glob_files "*.ml")))
 (targets "walkthrough.mld")
 (action
  (run %{doccer} %{ml})))

(rule
 (alias doc)
 (deps
  (:runner "../dune_helpers/runner.exe")
  (:scads
   (glob_files "*.exe")))
 (targets
  (dir "scads"))
 (action
  (chdir
   "scads"
   (run %{runner} %{scads}))))

(rule
 (alias doc)
 (deps
  (:exporter "../dune_helpers/snapper.exe")
  (:scads
   (glob_files "scads/*.scad")))
 (targets
  (dir "pngs"))
 (action
  (chdir
   "pngs"
   (run %{exporter} %{scads}))))

(rule
 (alias doc)
 (deps
  (:copier "../dune_helpers/copier.exe")
  (:img
   (glob_files assets/*)
   (glob_files pngs/*)))
 (targets
  (dir "odoc-assets"))
 (action
  (progn
   (run %{copier} "odoc-assets" "--basename" %{img})
   (run %{copier} "../_doc/_html/dometyl/_assets" "--basename" %{img}))))

(install
 (files
  (glob_files odoc-assets/*))
 (section doc))
