(library
 (name dometyl)
 (public_name dometyl)
 (libraries OCADml OSCADml dune-site)
 (preprocess
  (pps ppx_deriving_cad)))

(rule
 (alias install)
 (deps
  (:copier "../dune_helpers/copier.exe")
  (:stls
   (glob_files_rec *.stl)))
 (targets
  (dir "stls"))
 (action
  (run %{copier} "stls" %{stls})))

(install
 (dirs stls)
 (section
  (site
   (dometyl imports))))

(generate_sites_module
 (module DuneSites)
 (sites dometyl))
